Replace String.format with String::formatted